tests/baselines/reference/incrementOperatorWithEnumType.errors.txt
incrementOperatorWithEnumType.ts(6,31): error TS2540: Cannot assign to 'B' because it is a read-only property.
incrementOperatorWithEnumType.ts(7,29): error TS2540: Cannot assign to 'B' because it is a read-only property.
incrementOperatorWithEnumType.ts(10,9): error TS2540: Cannot assign to 'B' because it is a read-only property.
incrementOperatorWithEnumType.ts(12,7): error TS2540: Cannot assign to 'B' because it is a read-only property.


==== incrementOperatorWithEnumType.ts (4 errors) ====
    // ++ operator on enum type
    
    enum ENUM1 { A, B, "" };
    
    // expression
    var ResultIsNumber1 = ++ENUM1["B"];
                                  ~~~
!!! error TS2540: Cannot assign to 'B' because it is a read-only property.
    var ResultIsNumber2 = ENUM1.B++;
                                ~
!!! error TS2540: Cannot assign to 'B' because it is a read-only property.
    
    // miss assignment operator
    ++ENUM1["B"];
            ~~~
!!! error TS2540: Cannot assign to 'B' because it is a read-only property.
    
    ENUM1.B++;
          ~
!!! error TS2540: Cannot assign to 'B' because it is a read-only property.